# sdd-fastapi-reference

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/skills/fastapi-builder/: SKILL.md
.specify/memory/: constitution.md
history/prompts/001-user-auth/: 0001-001-user-auth-implementation-planning.plan.prompt.md  0002-simplify-name-validation-pattern.plan.prompt.md  0003-generate-user-auth-tasks.tasks.prompt.md  0004-add-checkpoint-verification-tasks.tasks.prompt.md  0005-implement-user-auth-feature.green.prompt.md
history/prompts/002-task-crud/: 0001-create-task-crud-specification.spec.prompt.md  0002-002-task-crud-implementation-planning.plan.prompt.md  0003-commit-and-pr-sdd-artifacts.misc.prompt.md  0004-generate-task-crud-tasks.tasks.prompt.md  0005-commit-pr-sdd-task-artifacts.misc.prompt.md
history/prompts/constitution/: 0001-create-task-api-constitution.constitution.prompt.md  (+1 more)
specs/001-user-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-task-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.py  database.py  main.py
src/api/: deps.py
src/core/: exceptions.py  security.py
src/middleware/: rate_limit.py
src/models/: __init__.py  token.py  user.py
src/schemas/: auth.py  error.py  user.py
src/services/: auth_service.py  password_service.py  token_service.py  user_service.py
tests/: conftest.py
tests/integration/: test_account_deletion.py  test_login.py  test_logout.py  test_password_reset.py  test_registration.py  test_token_refresh.py
(+19 files in other folders)
